--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
         "react-redux": "7.1.3",
         "react-router-config": "5.1.1",
         "react-router-dom": "5.1.2",
+        "react-idle-timer": "^4.2.12",
         "react-scripts": "3.3.0",
         "react-select": "3.0.8",
         "react-spring": "8.0.27",
