--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
         "react-dom": "16.12.0",
         "react-draggable": "4.2.0",
         "react-frame-component": "4.1.1",
+        "react-json-tree": "0.11.2",
         "react-masonry-css": "1.0.14",
         "react-number-format": "4.3.1",
         "react-popper": "1.3.7",
