--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
         "prismjs": "1.17.1",
         "qs": "6.9.1",
         "raw-loader": "1.0.0",
-        "react": "16.12.0",
+        "react": "^16.12.0",
         "react-autosuggest": "9.4.3",
         "react-beautiful-dnd": "12.2.0",
         "react-big-calendar": "0.23.0",
@@ -44,6 +44,7 @@
         "react-dom": "16.12.0",
         "react-draggable": "4.2.0",
         "react-frame-component": "4.1.1",
+        "react-idle-timer": "^4.2.12",
         "react-json-tree": "0.11.2",
         "react-masonry-css": "1.0.14",
         "react-number-format": "4.3.1",
@@ -51,19 +52,21 @@
         "react-redux": "7.1.3",
         "react-router-config": "5.1.1",
         "react-router-dom": "5.1.2",
-        "react-idle-timer": "^4.2.12",
         "react-scripts": "3.3.0",
         "react-select": "3.0.8",
         "react-spring": "8.0.27",
         "react-swipeable-views": "0.13.3",
         "react-table": "6.11.4",
         "react-text-mask": "5.4.3",
+        "react-vega": "^7.3.0",
         "react-virtualized": "9.21.2",
         "react-window": "1.8.5",
         "redux": "4.0.4",
         "redux-thunk": "2.3.0",
         "styled-components": "4.4.1",
         "typeface-muli": "0.0.71",
+        "vega": "^5.13.0",
+        "vega-lite": "^4.13.1",
         "velocity-react": "1.4.3"
     },
     "resolutions": {
