--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "react-beautiful-dnd": "12.2.0",
         "react-big-calendar": "0.23.0",
         "react-chartjs-2": "2.8.0",
+        "react-confirm-alert": "^2.6.1",
         "react-dom": "16.12.0",
         "react-draggable": "4.2.0",
         "react-frame-component": "4.1.1",
@@ -52,12 +53,13 @@
         "react-redux": "7.1.3",
         "react-router-config": "5.1.1",
         "react-router-dom": "5.1.2",
-        "react-scripts": "3.3.0",
+        "react-scripts": "3.4.0",
         "react-select": "3.0.8",
         "react-spring": "8.0.27",
         "react-swipeable-views": "0.13.3",
         "react-table": "6.11.4",
         "react-text-mask": "5.4.3",
+        "react-toasts": "^3.0.6",
         "react-vega": "^7.3.0",
         "react-virtualized": "9.21.2",
         "react-window": "1.8.5",
