--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
         "react-number-format": "4.3.1",
         "react-popper": "1.3.7",
         "react-redux": "7.1.3",
+        "react-responsive-modal": "^5.0.3",
         "react-router-config": "5.1.1",
         "react-router-dom": "5.1.2",
         "react-scripts": "3.4.0",
