--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
         "autosuggest-highlight": "3.1.1",
         "axios": "0.19.0",
         "axios-mock-adapter": "1.17.0",
+        "brace": "^0.11.1",
         "chart.js": "2.9.3",
         "date-fns": "2.8.1",
         "downshift": "3.4.8",
         "firebase": "7.6.0",
         "formsy-react": "1.1.5",
         "google-map-react": "1.1.5",
+        "jsoneditor": "^9.0.4",
+        "jsoneditor-react": "^3.0.1",
         "jsonwebtoken": "8.5.1",
         "jss": "10.0.0",
         "jss-extend": "6.2.0",
