--- a/package.json
+++ b/package.json
@@ -89,7 +89,7 @@
         "build-docs": "find ./src/app/main/documentation/material-ui-components \\( -name '*.ts' -o -name '*.tsx' \\) -type f -delete && babel-node src/app/main/documentation/material-ui-components/build.js",
         "build-stats": "yarn run build --stats",
         "bundle-report": "yarn run build-stats && webpack-bundle-analyzer build/bundle-stats.json -m static -r build/bundle-stats.html -O",
-        "tarball": "npm run build && tar -cvf cines-build.tar build/"
+        "tarball": "rm cines-build.tar; npm run build && tar -cvf cines-build.tar build/"
     },
     "eslintConfig": {
         "extends": "react-app"
