--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "@material-ui/lab": "4.0.0-alpha.36",
         "@material-ui/pickers": "3.2.8",
         "@material-ui/styles": "4.7.1",
+        "@types/react": "*",
         "auth0-lock": "11.21.0",
         "autosuggest-highlight": "3.1.1",
         "axios": "0.19.0",
@@ -18,6 +19,8 @@
         "chart.js": "2.9.3",
         "date-fns": "2.8.1",
         "downshift": "3.4.8",
+        "file-exists": "^5.0.1",
+        "filesize": "^6.1.0",
         "firebase": "7.6.0",
         "formsy-react": "1.1.5",
         "google-map-react": "1.1.5",
@@ -32,6 +35,7 @@
         "material-table": "1.54.2",
         "material-ui-popup-state": "1.5.1",
         "mobile-detect": "1.4.4",
+        "module-exists": "^0.4.0",
         "moment": "2.24.0",
         "notistack": "0.9.7",
         "path-to-regexp": "3.1.0",
@@ -55,8 +59,9 @@
         "react-popper": "1.3.7",
         "react-redux": "7.1.3",
         "react-responsive-modal": "^5.0.3",
+        "react-router": "^5.2.0",
         "react-router-config": "5.1.1",
-        "react-router-dom": "5.1.2",
+        "react-router-dom": "^5.2.0",
         "react-router-navigation-prompt": "^1.8.13",
         "react-scripts": "3.4.0",
         "react-select": "3.0.8",
@@ -65,6 +70,7 @@
         "react-table": "6.11.4",
         "react-text-mask": "5.4.3",
         "react-toasts": "^3.0.6",
+        "react-tooltip": "^4.2.13",
         "react-vega": "^7.3.0",
         "react-virtualized": "9.21.2",
         "react-window": "1.8.5",
