--- a/package.json
+++ b/package.json
@@ -3,16 +3,16 @@
     "version": "3.3.0",
     "private": true,
     "dependencies": {
+        "@date-io/core": "^1.3.13",
         "@date-io/date-fns": "1.3.13",
         "@date-io/moment": "1.3.13",
-        "@material-ui/core": "4.8.0",
-        "@material-ui/icons": "4.5.1",
-        "@material-ui/lab": "4.0.0-alpha.36",
-        "@material-ui/pickers": "3.2.8",
-        "@material-ui/styles": "4.7.1",
-        "auth0-lock": "11.21.0",
+        "@material-ui/core": "4.11.3",
+        "@material-ui/icons": "4.11.2",
+        "@material-ui/lab": "4.0.0-alpha.57",
+        "@material-ui/pickers": "3.2.10",
+        "@material-ui/styles": "4.11.3",
         "autosuggest-highlight": "3.1.1",
-        "axios": "0.19.0",
+        "axios": "0.21.0",
         "axios-mock-adapter": "1.17.0",
         "brace": "^0.11.1",
         "chart.js": "2.9.3",
@@ -37,6 +37,7 @@
         "path-to-regexp": "3.1.0",
         "perfect-scrollbar": "1.4.0",
         "prismjs": "1.17.1",
+        "prop-types": "^15.6.0",
         "qs": "6.9.1",
         "raw-loader": "1.0.0",
         "react": "^16.12.0",
@@ -44,8 +45,8 @@
         "react-beautiful-dnd": "12.2.0",
         "react-big-calendar": "0.23.0",
         "react-chartjs-2": "2.8.0",
-        "react-confirm-alert": "^2.6.1",
-        "react-dom": "16.12.0",
+        "react-confirm-alert": "^2.6.0",
+        "react-dom": "^16.12.0",
         "react-draggable": "4.2.0",
         "react-frame-component": "4.1.1",
         "react-idle-timer": "^4.2.12",
@@ -55,8 +56,9 @@
         "react-popper": "1.3.7",
         "react-redux": "7.1.3",
         "react-responsive-modal": "^5.0.3",
-        "react-router-config": "5.1.1",
-        "react-router-dom": "5.1.2",
+        "react-router": "^5.2.0",
+        "react-router-config": "5.1.0",
+        "react-router-dom": "5.2.0",
         "react-router-navigation-prompt": "^1.8.13",
         "react-scripts": "3.4.0",
         "react-select": "3.0.8",
@@ -64,11 +66,11 @@
         "react-swipeable-views": "0.13.3",
         "react-table": "6.11.4",
         "react-text-mask": "5.4.3",
-        "react-toasts": "^3.0.6",
+        "react-toasts": "^3.0.5",
         "react-vega": "^7.3.0",
         "react-virtualized": "9.21.2",
         "react-window": "1.8.5",
-        "redux": "4.0.4",
+        "redux": "4.0.5",
         "redux-thunk": "2.3.0",
         "styled-components": "4.4.1",
         "typeface-muli": "0.0.71",
@@ -79,7 +81,7 @@
     "resolutions": {
         "react": "16.12.0",
         "react-dom": "16.12.0",
-        "date-arithmetic": "3.1.0"
+        "date-arithmetic": "4.0.1"
     },
     "devDependencies": {
         "@babel/core": "7.7.4",
