set .env to the prod sciduct for now

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 REACT_APP_MAP_KEY=AIzaSyAYdp6JWyJaD-2Jiil3ggePxUBDIMpD-Kg
-REACT_APP_SCIDUCT_FILE_SERVICE="http://djm:8000"
-REACT_APP_SCIDUCT_JOB_SERVICE="http://djm:8002"
-REACT_APP_SCIDUCT_USER_SERVICE="https://sciduct.bii.virginia.edu/usersvc"
+REACT_APP_SCIDUCT_FILE_SERVICE=https://sciduct.bii.virginia.edu/filesvc
+REACT_APP_SCIDUCT_JOB_SERVICE=https://sciduct.bii.virginia.edu/jobsvc
+REACT_APP_SCIDUCT_USER_SERVICE=https://sciduct.bii.virginia.edu/usersvc
