--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "jwt-decode": "2.2.0",
         "keycode": "2.2.0",
         "lodash": "4.17.21",
+        "material-react-toastify": "^1.0.1",
         "material-table": "1.54.2",
         "material-ui-popup-state": "1.5.1",
         "mobile-detect": "1.4.4",
