--- a/package.json
+++ b/package.json
@@ -112,8 +112,8 @@
         "build-stats": "yarn run build --stats",
         "bundle-report": "yarn run build-stats && webpack-bundle-analyzer build/bundle-stats.json -m static -r build/bundle-stats.html -O",
         "tarball-prod": "cp .env.cines_prod .env.production; yarn run build && rm cines-build-prod.tar; npm run build && tar -cvf cines-build-prod.tar build/ ; rm .env.production",
-        "tarball-alpha": "cp .env.alpha .env.production && cat .env && yarn run build && rm cines-build-alpha.tar; npm run build && tar -cvf cines-build-alpha.tar build/ ; rm .env.production",
-        "tarball-ptest": "cp .env.ptest .env.production && cat .env && yarn run build && rm cines-build-ptest.tar; npm run build && tar -cvf cines-build-ptest.tar build/ ; rm .env.production"
+        "tarball-alpha": "cp .env.alpha .env.production && cat .env && yarn run build && rm cines-build-alpha.tgz; npm run build && tar -czvf cines-build-alpha.tgz build/ ; rm .env.production",
+        "tarball-ptest": "cp .env.ptest .env.production && cat .env && yarn run build && rm cines-build-ptest.tgz; npm run build && tar -czvf cines-build-ptest.tgz build/ ; rm .env.production"
     },
     "eslintConfig": {
         "extends": "react-app"
