show version. icon updates

--- a/.env
+++ b/.env
@@ -5,4 +5,5 @@ REACT_APP_SCIDUCT_USER_SERVICE=https://sciduct.bii.virginia.edu/usersvc
 REACT_APP_SCIDUCT_APP_ID=net.science_dev
 REACT_APP_CALLBACK_URL=http://localhost:3000/callback
 REACT_APP_LOGOUT_URL=http://localhost:3000
+REACT_APP_INSTANCE_NAME=dev
 
