--- a/.env.cines_prod
+++ b/.env.cines_prod
@@ -5,4 +5,4 @@ REACT_APP_SCIDUCT_USER_SERVICE=https://sciduct.bii.virginia.edu/usersvc
 REACT_APP_SCIDUCT_APP_ID=net.science
 REACT_APP_CALLBACK_URL=https://net.science/callback
 REACT_APP_LOGOUT_URL=https://net.science
-
+REACT_APP_INSTANCE_NAME=
