--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "fuse-react-app",
-    "version": "3.3.0",
+    "name": "net.science",
+    "version": "0.9.1",
     "private": true,
     "dependencies": {
         "@date-io/core": "^1.3.13",
