--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "mobile-detect": "1.4.4",
         "module-exists": "^0.4.0",
         "moment": "2.24.0",
+        "node-sciduct": "^1.1.8",
         "notistack": "0.9.7",
         "path-to-regexp": "3.1.0",
         "perfect-scrollbar": "1.4.0",
