--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
         "react-number-format": "4.3.1",
         "react-popper": "1.3.7",
         "react-redux": "7.1.3",
+        "react-resize-panel": "^0.3.5",
         "react-responsive-modal": "^5.0.3",
         "react-router": "^5.2.0",
         "react-router-config": "5.1.0",
