--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
         "@date-io/core": "^1.3.13",
         "@date-io/date-fns": "1.3.13",
         "@date-io/moment": "1.3.13",
+        "@emotion/react": "^11.5.0",
+        "@emotion/styled": "^11.3.0",
         "@material-ui/core": "4.11.3",
         "@material-ui/icons": "4.11.2",
         "@material-ui/lab": "4.0.0-alpha.57",
         "@material-ui/pickers": "3.2.10",
         "@material-ui/styles": "4.11.3",
+        "@mui/material": "^5.0.6",
         "@types/react": "*",
         "autosuggest-highlight": "3.1.1",
         "axios": "0.21.1",
