--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "net.science",
-    "version": "1.2.3",
+    "version": "2.1.0-1",
     "private": true,
     "dependencies": {
         "@date-io/core": "^1.3.13",
