packge.json for manual node_modules installation

--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
         "file-exists": "^5.0.1",
         "file-saver": "^2.0.5",
         "filesize": "^6.1.0",
-        "firebase": "7.6.0",
         "fix-date": "^1.1.6",
         "formsy-react": "1.1.5",
         "google-map-react": "1.1.5",
@@ -51,7 +50,7 @@
         "mobile-detect": "1.4.4",
         "module-exists": "^0.4.0",
         "moment": "2.24.0",
-        "node-sciduct": "github:NSSAC/node-sciduct",
+        "node-sciduct": "^1.1.8",
         "notistack": "0.9.7",
         "papaparse": "^5.3.1",
         "path-to-regexp": "3.1.0",
@@ -80,10 +79,10 @@
         "react-redux": "7.1.3",
         "react-resize-panel": "^0.3.5",
         "react-responsive-modal": "^5.0.3",
-        "react-router": "^5.2.0",
+        "react-router": "5.2.0",
         "react-router-config": "5.1.0",
         "react-router-dom": "5.2.0",
-        "react-router-navigation-prompt": "^1.8.13",
+        "react-router-navigation-prompt": "1.8.13",
         "react-router-redux": "^4.0.8",
         "react-scripts": "3.4.0",
         "react-select": "3.0.8",
@@ -118,6 +117,7 @@
         "marked": "0.8.0",
         "purgecss": "1.4.2",
         "tailwindcss": "1.1.4",
+        "webpack": "4.41.5",
         "webpack-bundle-analyzer": "3.6.0"
     },
     "scripts": {
