--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "net.science",
-    "version": "2.1.0-1",
+    "version": "1.4.0",
     "private": true,
     "dependencies": {
         "@date-io/core": "^1.3.13",
@@ -18,6 +18,7 @@
         "axios": "0.21.2",
         "axios-mock-adapter": "1.17.0",
         "brace": "^0.11.1",
+        "caniuse-lite": "^1.0.30001382",
         "chart.js": "2.9.4",
         "cytoscape": "^3.20.0",
         "cytoscape-avsdf": "^1.0.0",
@@ -49,7 +50,7 @@
         "mobile-detect": "1.4.4",
         "module-exists": "^0.4.0",
         "moment": "2.24.0",
-        "node-sciduct": "^1.1.8",
+        "node-sciduct": "^1.2.0",
         "notistack": "0.9.7",
         "papaparse": "^5.3.1",
         "path-to-regexp": "3.1.0",
