--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "fix-date": "^1.1.6",
         "formsy-react": "1.1.5",
         "google-map-react": "1.1.5",
+        "jquery": "^3.6.3",
         "jsoneditor": "^9.5.7",
         "jsoneditor-react": "^3.0.1",
         "jsonwebtoken": "8.5.1",
