--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
         "@material-ui/pickers": "3.2.10",
         "@material-ui/styles": "4.11.3",
         "@types/react": "*",
-        "ajv": "^6.12.6",
+        "ajv": "^8.12.0",
+        "ajv-formats": "^2.1.1",
+        "ajv-keywords": "^5.1.0",
         "autosuggest-highlight": "3.1.1",
         "axios": "0.21.2",
         "axios-mock-adapter": "1.17.0",
